.metadata/.plugins/org.eclipse.cdt.ui/inet-framework-simulte-afd56c4.build.log
21:06:37 **** Incremental Build of configuration gcc-debug for project inet-framework-simulte-afd56c4 ****
make MODE=debug CONFIGNAME=gcc-debug -j4 all 
cd src && make
make[1]: Entering directory '/home/joelias/Dropbox/UFF/Pesquisa/battery/inet-framework-simulte-afd56c4/src'
power/battery/BaseBattery.cc
power/battery/SimpleBattery.cc
power/battery/BaseModule.cc
power/battery/BatteryAccess.cc
In file included from power/battery/SimpleBattery.h:18:0,
                 from power/battery/SimpleBattery.cc:20:
power/battery/MiXiMDefs.h:38:19: error: ‘simsignal_t’ does not name a type
  mutable volatile simsignal_t ssChangeSignal;
                   ^~~~~~~~~~~
power/battery/MiXiMDefs.h:56:2: error: ‘simsignal_t’ does not name a type
  simsignal_t initialize() const {
  ^~~~~~~~~~~
power/battery/MiXiMDefs.h:67:11: error: expected type-specifier before ‘simsignal_t’
  operator simsignal_t () const {
           ^~~~~~~~~~~
power/battery/SimpleBattery.cc:458:1: error: expected ‘}’ at end of input
 }
 ^
In file included from power/battery/SimpleBattery.h:18:0,
                 from power/battery/SimpleBattery.cc:20:
power/battery/MiXiMDefs.h: In constructor ‘simsignalwrap_t::simsignalwrap_t(const char*)’:
power/battery/MiXiMDefs.h:42:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(SIMSIGNAL_NULL)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: In copy constructor ‘simsignalwrap_t::simsignalwrap_t(const simsignalwrap_t&)’:
power/battery/MiXiMDefs.h:46:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h:46:26: error: ‘const class simsignalwrap_t’ has no member named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
                          ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: At global scope:
power/battery/MiXiMDefs.h:48:3: error: expected unqualified-id at end of input
  {}
   ^
In file included from power/battery/BaseModule.h:27:0,
                 from power/battery/BatteryAccess.h:13,
                 from power/battery/BatteryAccess.cc:8:
power/battery/MiXiMDefs.h:38:19: error: ‘simsignal_t’ does not name a type
  mutable volatile simsignal_t ssChangeSignal;
                   ^~~~~~~~~~~
power/battery/MiXiMDefs.h:56:2: error: ‘simsignal_t’ does not name a type
  simsignal_t initialize() const {
  ^~~~~~~~~~~
power/battery/MiXiMDefs.h:67:11: error: expected type-specifier before ‘simsignal_t’
  operator simsignal_t () const {
           ^~~~~~~~~~~
power/battery/BatteryAccess.cc:52:1: error: expected ‘}’ at end of input
 }
 ^
In file included from power/battery/BaseModule.h:27:0,
                 from power/battery/BatteryAccess.h:13,
                 from power/battery/BatteryAccess.cc:8:
power/battery/MiXiMDefs.h: In constructor ‘simsignalwrap_t::simsignalwrap_t(const char*)’:
power/battery/MiXiMDefs.h:42:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(SIMSIGNAL_NULL)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: In copy constructor ‘simsignalwrap_t::simsignalwrap_t(const simsignalwrap_t&)’:
power/battery/MiXiMDefs.h:46:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h:46:26: error: ‘const class simsignalwrap_t’ has no member named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
                          ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: At global scope:
power/battery/MiXiMDefs.h:48:3: error: expected unqualified-id at end of input
  {}
   ^
In file included from power/battery/BaseModule.h:27:0,
                 from power/battery/BaseModule.cc:21:
power/battery/MiXiMDefs.h:38:19: error: ‘simsignal_t’ does not name a type
  mutable volatile simsignal_t ssChangeSignal;
                   ^~~~~~~~~~~
power/battery/MiXiMDefs.h:56:2: error: ‘simsignal_t’ does not name a type
  simsignal_t initialize() const {
  ^~~~~~~~~~~
power/battery/MiXiMDefs.h:67:11: error: expected type-specifier before ‘simsignal_t’
  operator simsignal_t () const {
           ^~~~~~~~~~~
power/battery/BaseModule.cc:143:1: error: expected ‘}’ at end of input
 }
 ^
In file included from power/battery/BaseModule.h:27:0,
                 from power/battery/BaseModule.cc:21:
power/battery/MiXiMDefs.h: In constructor ‘simsignalwrap_t::simsignalwrap_t(const char*)’:
power/battery/MiXiMDefs.h:42:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(SIMSIGNAL_NULL)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: In copy constructor ‘simsignalwrap_t::simsignalwrap_t(const simsignalwrap_t&)’:
power/battery/MiXiMDefs.h:46:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h:46:26: error: ‘const class simsignalwrap_t’ has no member named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
                          ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: At global scope:
power/battery/MiXiMDefs.h:48:3: error: expected unqualified-id at end of input
  {}
   ^
In file included from power/battery/BaseBattery.h:6:0,
                 from power/battery/BaseBattery.cc:1:
power/battery/MiXiMDefs.h:38:19: error: ‘simsignal_t’ does not name a type
  mutable volatile simsignal_t ssChangeSignal;
                   ^~~~~~~~~~~
power/battery/MiXiMDefs.h:56:2: error: ‘simsignal_t’ does not name a type
  simsignal_t initialize() const {
  ^~~~~~~~~~~
power/battery/MiXiMDefs.h:67:11: error: expected type-specifier before ‘simsignal_t’
  operator simsignal_t () const {
           ^~~~~~~~~~~
In file included from power/battery/BaseBattery.cc:1:0:
power/battery/BaseBattery.h:128:2: error: expected ‘}’ at end of input
 };
  ^
In file included from power/battery/BaseBattery.h:6:0,
                 from power/battery/BaseBattery.cc:1:
power/battery/MiXiMDefs.h: In constructor ‘simsignalwrap_t::simsignalwrap_t(const char*)’:
power/battery/MiXiMDefs.h:42:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(SIMSIGNAL_NULL)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: In copy constructor ‘simsignalwrap_t::simsignalwrap_t(const simsignalwrap_t&)’:
power/battery/MiXiMDefs.h:46:6: error: class ‘simsignalwrap_t’ does not have any field named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
      ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h:46:26: error: ‘const class simsignalwrap_t’ has no member named ‘ssChangeSignal’
    : ssChangeSignal(pCpy.ssChangeSignal)
                          ^~~~~~~~~~~~~~
power/battery/MiXiMDefs.h: At global scope:
power/battery/MiXiMDefs.h:48:3: error: expected unqualified-id at end of input
  {}
   ^
Makefile:348: recipe for target '../out/gcc-debug/src/power/battery/SimpleBattery.o' failed
make[1]: *** [../out/gcc-debug/src/power/battery/SimpleBattery.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Makefile:348: recipe for target '../out/gcc-debug/src/power/battery/BatteryAccess.o' failed
make[1]: *** [../out/gcc-debug/src/power/battery/BatteryAccess.o] Error 1
Makefile:348: recipe for target '../out/gcc-debug/src/power/battery/BaseModule.o' failed
make[1]: *** [../out/gcc-debug/src/power/battery/BaseModule.o] Error 1
make[1]: *** [../out/gcc-debug/src/power/battery/BaseBattery.o] Error 1
Makefile:348: recipe for target '../out/gcc-debug/src/power/battery/BaseBattery.o' failed
make[1]: Leaving directory '/home/joelias/Dropbox/UFF/Pesquisa/battery/inet-framework-simulte-afd56c4/src'
make: *** [all] Error 2
Makefile:2: recipe for target 'all' failed

21:06:40 Build Finished (took 3s.38ms)

